[metadata]
name = backend
url = https://github.com/hfu-graph-ml/backend
project_urls =
    Source Code = https://github.com/hfu-graph-ml/backend
    Issue Tracker = https://github.com/hfu-graph-ml/backend/issues
author = Techassi
author_email = git@techassi.dev
description = Backend to manipulate graph data

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.packages.find]
where = src
